--- a/web/tmpl/Genomes.tmpl
+++ b/web/tmpl/Genomes.tmpl
@@ -116,7 +116,7 @@ $(document).ready(function(){
 <table id="genome_table" class="small ui-widget-content ui-corner-all">
  <thead align="left"> 
   <tr>
-   <th>Name</th>
+   <th>Name / Description</th>
    <th>Version</th>
    <th>Date Loaded</th>
    <th>Edit</th>
