Change delete to non-permanent

--- a/web/tmpl/Genomes.tmpl
+++ b/web/tmpl/Genomes.tmpl
@@ -44,9 +44,8 @@ function get_genomes_for_user(opts) {
   });
 }
 
-/*
 function delete_genome () {
-  var eid = $('#genome_delete_gid').val();
+  var gid = $('#genome_delete_gid').val();
   $.ajax({
     data: {
       jquery_ajax: 1,
@@ -64,22 +63,20 @@ function dialog_delete_genome (opts) {
   $("#genome_delete_box").dialog("option", "title", "Delete Genome?");
   $("#genome_delete_box").dialog("option", "width", "450");
   $("#genome_delete_box").dialog('open');
-  $('#genome_delete_eid').val(opts.eid);
+  $('#genome_delete_gid').val(opts.gid);
 }
-*/
+
 </SCRIPT>
 
 <div id="genomes"><TMPL_VAR NAME="GENOME_TABLE"></div>
 
-<!--
 <div id="genome_delete_box" class="dialog_box" style='display:none;' align='center'>
-Are you sure you want to permanently delete this genome?<p>
+Are you sure you want to delete this genome?<p>
  <div>
   <input type='hidden' id='genome_delete_gid'>
   <span style="font-size: .75em" class='ui-button ui-button-go ui-corner-all' onClick="delete_genome();">Yes</span>
   <span style="font-size: .75em" class='ui-button ui-button-go ui-corner-all' onClick="$('#genome_delete_box').dialog('close');">No</span>
  </div>
--->
 </div>
 
 </TMPL_IF> <!-- MAIN -->
@@ -120,7 +117,7 @@ $(document).ready(function(){
    <th>Version</th>
    <th>Date Loaded</th>
    <th>Edit</th>
-   <!--<th>Delete</th>-->
+   <th>Delete</th>
   </tr>
  </thead>
  <tfoot>
@@ -137,7 +134,7 @@ $(document).ready(function(){
    <td style='text-align:center;'><TMPL_VAR NAME='VERSION'></td>
    <td style='text-align:center;'><TMPL_VAR NAME='DATE'></td>
    <td style='text-align:center;'><TMPL_VAR NAME='EDIT_BUTTON'></td>
-   <!--<td style='text-align:center;'><TMPL_VAR NAME='DELETE_BUTTON'></td>-->
+   <td style='text-align:center;'><TMPL_VAR NAME='DELETE_BUTTON'></td>
   </tr>
   </TMPL_LOOP>
  </tbody>
