--- a/web/tmpl/Genomes.tmpl
+++ b/web/tmpl/Genomes.tmpl
@@ -6,7 +6,7 @@
 $(document).ready(function(){
   $.ajaxSetup({
     type: "GET",
-    url: '<TMPL_VAR NAME='PAGE_NAME'>'+'.pl',
+    //url: '<TMPL_VAR NAME='PAGE_NAME'>'+'.pl',
     dataType: "html",
     cache: false,
   });
